--- a/docu/2024_09_01_copilot.md
+++ b/docu/2024_09_01_copilot.md
@@ -76,14 +76,15 @@ These examples are quite basic and might need adjustments based on your specific
 
 Sure! Here are some useful resources and documentation to help you with controlling your Blackmagic Pocket Cinema Camera 6K Pro through an ATEM Video Switcher using Bluetooth:
 
-Blackmagic Design Support Center: This is the official support page where you can find the latest software updates, support notes, and instruction manuals for all Blackmagic products1.
-Blackmagic Pocket Cinema Camera 6K Pro Manual: This manual provides detailed information on the installation and operation of your camera. It includes sections on camera control protocols, which might be useful for your project2.
-Blackmagic SDI and Bluetooth Camera Control Protocol: This document outlines the protocols used for controlling Blackmagic cameras via SDI and Bluetooth. It includes technical details that can help you understand how to send commands to your camera3.
-Blackmagic Forum: The community forum is a great place to connect with other users and find additional tips and code snippets. You can ask questions and share your experiences with other Blackmagic users1.
+- Blackmagic Design Support Center: This is the official support page where you can find the latest software updates, support notes, and instruction manuals for all Blackmagic products1.
+- Blackmagic Pocket Cinema Camera 6K Pro Manual: This manual provides detailed information on the installation and operation of your camera. It includes sections on camera control protocols, which might be useful for your project2.
+- Blackmagic SDI and Bluetooth Camera Control Protocol: This document outlines the protocols used for controlling Blackmagic cameras via SDI and Bluetooth. It includes technical details that can help you understand how to send commands to your camera3.
+- Blackmagic Forum: The community forum is a great place to connect with other users and find additional tips and code snippets. You can ask questions and share your experiences with other Blackmagic users1.
+
 These resources should provide you with the detailed information you need to implement your project. If you have any specific questions or need further assistance with the code, feel free to ask!
 
-https://www.blackmagicdesign.com/support/
-https://www.manualslib.com/manual/3126001/Blackmagicdesign-Blackmagic-Pocket-Cinema-Camera-6k-Pro.html
-https://usermanual.com/support/blackmagicdesign/pocket-cinema-camera-6k-pro/manual
-https://usermanual.com/support/blackmagicdesign/pocket-cinema-camera-6k-g2/manual
+- https://www.blackmagicdesign.com/support/
+- https://www.manualslib.com/manual/3126001/Blackmagicdesign-Blackmagic-Pocket-Cinema-Camera-6k-Pro.html
+- https://usermanual.com/support/blackmagicdesign/pocket-cinema-camera-6k-pro/manual
+- https://usermanual.com/support/blackmagicdesign/pocket-cinema-camera-6k-g2/manual
 
